IntelliJ IDEA でコード整形。